--- a/requirements.txt
+++ b/requirements.txt
@@ -76,6 +76,7 @@ py-cpuinfo==9.0.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycocotools==2.0.7
+pygame==2.5.1
 Pygments==2.16.1
 pyparsing==3.1.1
 pyperclip==1.8.2
@@ -92,6 +93,7 @@ rsa==4.9
 sacrebleu==2.3.1
 scikit-learn==1.3.0
 scipy==1.11.2
+screeninfo==0.8.1
 seaborn==0.12.2
 sentencepiece==0.1.99
 seqeval==1.2.2
