--- a/requirements.txt
+++ b/requirements.txt
@@ -1,131 +1,46 @@
-absl-py==1.4.0
-array-record==0.4.1
-asttokens==2.4.0
+absl-py==2.1.0
 astunparse==1.6.3
-backcall==0.2.0
-bleach==6.0.0
-cachetools==5.3.1
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.7
-colorama==0.4.6
-comm==0.1.4
-contourpy==1.1.0
-cycler==0.11.0
-Cython==3.0.2
-debugpy==1.8.0
-decorator==5.1.1
-dm-tree==0.1.8
-etils==1.4.1
-executing==1.2.0
-flatbuffers==23.5.26
-fonttools==4.42.1
-gast==0.4.0
-gin-config==0.5.0
-google-api-core==2.11.1
-google-api-python-client==2.99.0
-google-auth==2.23.0
-google-auth-httplib2==0.1.1
-google-auth-oauthlib==1.0.0
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+flatbuffers==24.3.7
+gast==0.5.4
+google-auth==2.29.0
+google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
-googleapis-common-protos==1.60.0
-grpcio==1.58.0
-h5py==3.9.0
-httplib2==0.22.0
-idna==3.4
-immutabledict==3.0.0
-importlib==1.0.4
-importlib-resources==6.0.1
-install==1.3.5
-ipykernel==6.25.2
-ipython==8.15.0
-jedi==0.19.0
-joblib==1.3.2
-jupyter_client==8.3.1
-jupyter_core==5.3.1
-kaggle==1.5.16
-keras==2.13.1
-kiwisolver==1.4.5
-libclang==16.0.6
-lvis==0.5.3
-lxml==4.9.3
-Markdown==3.4.4
-MarkupSafe==2.1.3
-matplotlib==3.7.3
-matplotlib-inline==0.1.6
-nest-asyncio==1.5.7
-numpy==1.24.3
-oauth2client==4.1.3
+grpcio==1.62.1
+h5py==3.10.0
+idna==3.6
+keras==3.1.1
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.3.2
+namex==0.0.7
+numpy==1.26.4
 oauthlib==3.2.2
-opencv-python==4.8.0.76
-opencv-python-headless==4.8.0.76
 opt-einsum==3.3.0
-packaging==23.1
-pandas==2.1.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==10.0.0
-platformdirs==3.10.0
-portalocker==2.7.0
-promise==2.3
-prompt-toolkit==3.0.39
-protobuf==3.20.3
-psutil==5.9.5
-pure-eval==0.2.2
-py-cpuinfo==9.0.0
-pyasn1==0.5.0
+optree==0.10.0
+packaging==24.0
+pillow==10.2.0
+protobuf==4.25.3
+pyasn1==0.5.1
 pyasn1-modules==0.3.0
-pycocotools==2.0.7
-pygame==2.5.1
-Pygments==2.16.1
-pyparsing==3.1.1
-pyperclip==1.8.2
-python-dateutil==2.8.2
-python-slugify==8.0.1
-pytz==2023.3.post1
-pywin32==306
-PyYAML==6.0.1
-pyzmq==25.1.1
-regex==2023.8.8
+Pygments==2.17.2
 requests==2.31.0
-requests-oauthlib==1.3.1
+requests-oauthlib==2.0.0
+rich==13.7.1
 rsa==4.9
-sacrebleu==2.3.1
-scikit-learn==1.3.0
-scipy==1.11.2
-screeninfo==0.8.1
-seaborn==0.12.2
-sentencepiece==0.1.99
-seqeval==1.2.2
 six==1.16.0
-stack-data==0.6.2
-tabulate==0.9.0
-tensorboard==2.13.0
-tensorboard-data-server==0.7.1
-tensorflow==2.13.0
-tensorflow-datasets==4.9.3
-tensorflow-estimator==2.13.0
-tensorflow-hub==0.14.0
-tensorflow-intel==2.13.0
-tensorflow-io==0.31.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow-metadata==1.14.0
-tensorflow-model-optimization==0.7.5
-termcolor==2.3.0
-text-unidecode==1.3
-tf-slim==1.1.0
-threadpoolctl==3.2.0
-toml==0.10.2
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.9.0
-typing_extensions==4.5.0
-tzdata==2023.3
-uritemplate==4.1.1
-urllib3==1.26.16
-wcwidth==0.2.6
-webencodings==0.5.1
-Werkzeug==2.3.7
-wget==3.2
-wrapt==1.15.0
-zipp==3.16.2
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.36.0
+termcolor==2.4.0
+typing_extensions==4.10.0
+urllib3==2.2.1
+Werkzeug==3.0.1
+wrapt==1.14.1
