--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
 absl-py==2.1.0
+array_record==0.5.1
+asttokens==2.4.1
 astunparse==1.6.3
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
 contourpy==1.2.1
 cycler==0.12.1
+decorator==5.1.1
+dm-tree==0.1.8
+docstring_parser==0.16
+efficientnet==1.1.1
+etils==1.7.0
+exceptiongroup==1.2.1
+executing==2.0.1
 flatbuffers==24.3.7
 fonttools==4.51.0
+fsspec==2024.6.0
 gast==0.5.4
 google-auth==2.29.0
 google-auth-oauthlib==1.2.0
@@ -16,9 +27,16 @@ gviz-api==1.10.0
 h5py==3.10.0
 idna==3.6
 imageio==2.34.1
+immutabledict==4.2.0
+importlib_resources==6.4.0
+ipython==8.25.0
+jedi==0.19.1
 joblib==1.3.2
+kagglehub==0.2.5
 keras==3.1.1
 Keras-Applications==1.0.8
+keras-core==0.1.7
+keras-cv==0.9.0
 kiwisolver==1.4.5
 lazy_loader==0.4
 libclang==18.1.1
@@ -26,6 +44,7 @@ Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.8.4
+matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.3.2
 namex==0.0.7
@@ -35,13 +54,22 @@ oauthlib==3.2.2
 opt-einsum==3.3.0
 optree==0.10.0
 packaging==24.0
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.2.0
-protobuf==4.25.3
+promise==2.3
+prompt_toolkit==3.0.47
+protobuf==3.20.3
+psutil==6.0.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==16.1.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 Pygments==2.17.2
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+regex==2024.5.15
 requests==2.31.0
 requests-oauthlib==2.0.0
 rich==13.7.1
@@ -49,17 +77,26 @@ rsa==4.9
 scikit-image==0.23.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
+simple_parsing==0.1.5
 six==1.16.0
+stack-data==0.6.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorboard_plugin_profile==2.15.1
 tensorflow==2.16.1
+tensorflow-datasets==4.9.6
 tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.36.0
+tensorflow-metadata==1.15.0
 termcolor==2.4.0
 threadpoolctl==3.4.0
 tifffile==2024.5.10
+toml==0.10.2
+tqdm==4.66.4
+traitlets==5.14.3
 typing_extensions==4.10.0
 urllib3==2.2.1
+wcwidth==0.2.13
 Werkzeug==3.0.1
 wrapt==1.14.1
+zipp==3.19.2
