removed bad images

--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,6 @@ src/model/logs/*
 
 src/model/gann/training_checkpoints
 src/model/gann/images
+
+src/model/gann_tonsilstones/training_checkpoints
+src/model/gann_tonsilstones/images
