--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,8 @@
                 "50",
                 "--model_type",
                 "healthy-unhealthy",
-                "--training_sample",
-                "10"
+                "--number_folds",
+                "5"
             ],
             "console": "integratedTerminal"
         }
