properly training and testing ensemble using kfold

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
                 "--epochs",
                 "50",
                 "--model_type",
-                "healthy-unhealthy",
+                "ensemble",
                 "--number_folds",
                 "5"
             ],
