--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,16 +5,22 @@
             "name": "Run Python Script with Args",
             "type": "debugpy",
             "request": "launch",
-            "program": "${workspaceFolder}/src/model/state_of_art.py",
+            "program": "${workspaceFolder}/src/model/main.py",
             "args": [
                 "--input_data",
                 "/home/gmihai00/Repos/TenserflowModelTraining/src/dataset_helpers/data.csv",
+                "--model_name",
+                "ResNet50V2",
                 "--epochs",
-                "40",
+                "30",
+                "--model_type",
+                "tonsillitis-mononucleosis",
                 "--number_folds",
                 "5",
-                "--learning_rate", 
-                "0.00005"
+                "--learning_rate",
+                "0.005",
+                "--batch_size",
+                "16"
             ],
             "console": "integratedTerminal"
         }
