--- a/.vscode/launch_reevaluate.json
+++ b/.vscode/launch_reevaluate.json
@@ -8,8 +8,9 @@
             "program": "${workspaceFolder}/src/dataset_helpers/data_reevaluation_helper.py",
             "args": [
                 "--input",
-                "/home/gmihai00/Repos/TenserflowModelTraining/src/dataset_helpers/data.csv"
+                "${workspaceFolder}/src/dataset_helpers/data.csv"
             ],
+            "cwd": "${workspaceFolder}",
             "console": "integratedTerminal"
         }
     ]
