--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,17 +8,17 @@
             "program": "${workspaceFolder}/src/model/main.py",
             "args": [
                 "--input_data",
-                "/home/gmihai00/Repos/TenserflowModelTraining/src/dataset_helpers/data.csv",
+                "${workspaceFolder}/src/dataset_helpers/data.csv",
                 "--model_name",
-                "ResNet50V2",
+                "AlteredInceptionV3",
                 "--epochs",
-                "30",
+                "40",
                 "--model_type",
-                "tonsillitis-mononucleosis",
+                "ensemble",
                 "--number_folds",
                 "5",
                 "--learning_rate",
-                "0.005",
+                "0.0008",
                 "--batch_size",
                 "16"
             ],
