--- a/.vscode/launch_ensemble.json
+++ b/.vscode/launch_ensemble.json
@@ -8,7 +8,7 @@
             "program": "${workspaceFolder}/src/model/ensemble_models.py",
             "args": [
                 "--input_data",
-                "/home/gmihai00/Repos/TenserflowModelTraining/src/dataset_helpers/data.csv"
+                "${workspaceFolder}/src/dataset_helpers/data.csv"
             ],
             "console": "integratedTerminal"
         }
