--- a/.vscode/launch_state_of_art.json
+++ b/.vscode/launch_state_of_art.json
@@ -8,7 +8,7 @@
             "program": "${workspaceFolder}/src/model/state_of_art.py",
             "args": [
                 "--input_data",
-                "/home/gmihai00/Repos/TenserflowModelTraining/src/dataset_helpers/data.csv",
+                "${workspaceFolder}/src/dataset_helpers/data.csv",
                 "--epochs",
                 "40",
                 "--number_folds",
