torch initial setup

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,8 @@ src/model/gann/images
 src/model/gann_tonsilstones/training_checkpoints
 src/model/gann_tonsilstones/images
 
+
+.torch_env
+
+src/model/diffusion/results
+
