fixing height loading, adding cam images

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,11 @@
                 "--input_data",
                 "${workspaceFolder}/src/dataset_helpers/data.csv",
                 "--model_name",
-                "VGG19",
+                "AlteredTLInceptionV3",
                 "--epochs",
                 "15",
                 "--model_type",
-                "tonsillitis-mononucleosis",
+                "ensemble",
                 "--number_folds",
                 "5",
                 "--learning_rate",
